[package]
name = "do-cli"
version = "0.1.0"
edition = "2021"

authors = [ "Ben McAvoy <ben.mcavoy@tutanota.com>" ]
license = "MIT"

description = "A basic todo app with Rust and SQLx"
repository = "https://github.com/BenMcAvoy/Do"
homepage = "https://github.com/BenMcAvoy/Do"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
