[package]
name = "do-cli"
version = "0.1.0"
edition = "2021"

authors = [ "Ben McAvoy <ben.mcavoy@tutanota.com>" ]
license = "MIT"

description = "A basic todo app with Rust and SQLx"
repository = "https://github.com/BenMcAvoy/Do"
homepage = "https://github.com/BenMcAvoy/Do"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }

anyhow = "1.0.75"
colored = "2.0.4"

sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
thiserror = "1.0.50"
confy = "0.5.1"
serde = { version = "1.0.193", features = ["derive"] }
